# vs-vpn

./: AGENTS.md  Cargo.toml
.github/workflows/: ci.yml
android/: .gitignore  build-native.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vs/vpn/: MainActivity.kt  NativeLib.kt  ProxyManager.kt  ProxyService.kt  SettingsManager.kt
android/app/src/main/java/com/vs/vpn/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/rust-jni/: Cargo.toml
android/rust-jni/src/: lib.rs
core/socket-peer/: Cargo.toml
core/socket-peer/src/: lib.rs
feature/tunnel/api/: Cargo.toml
feature/tunnel/api/src/: lib.rs
feature/tunnel/quic/: Cargo.toml
feature/tunnel/quic/src/: cert.rs  lib.rs
feature/tunnel/tcp-encrypted/: Cargo.toml
feature/tunnel/tcp-encrypted/src/: crypto.rs  lib.rs
feature/tunnel/tcp-plain/: Cargo.toml
feature/tunnel/tcp-plain/src/: lib.rs
lib/: Cargo.toml
lib/src/: client.rs  lib.rs  protocol.rs  server.rs
lib/tests/: integration.rs
src/: client.rs  crypto.rs  lib.rs  main.rs  protocol.rs  server.rs  tunnel.rs
tests/: integration.rs
