[workspace]
resolver = "3"
members = [
    "lib",
    "bin/vs-vpn",
    "feature/tunnel/api",
    "feature/tunnel/tcp-plain",
    "feature/tunnel/tcp-encrypted",
    "feature/tunnel/quic",
    "core/socket-peer",
    "android/rust-jni",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
clap = "4.6"
hex = "0.4"
chacha20poly1305 = "0.10"
hkdf = "0.13"
sha2 = "0.11"
rand = "0.10"
jni = "0.22"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.14"
rustls-pemfile = "2"
