[package]
name = "vs-vpn"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
vs-vpn-tunnel = { path = "../feature/tunnel/api" }
vs-vpn-tunnel-tcp-plain = { path = "../feature/tunnel/tcp-plain" }
vs-vpn-tunnel-tcp-encrypted = { path = "../feature/tunnel/tcp-encrypted" }
vs-vpn-socket-peer = { path = "../core/socket-peer" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
