[package]
name = "vs-vpn-jni"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "vs_vpn_jni"

[dependencies]
vs-vpn = { path = "../../lib" }
jni = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "net", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
hex = { workspace = true }
