[package]
name = "vs-vpn-tunnel-quic"
version.workspace = true
edition.workspace = true

[dependencies]
vs-vpn-tunnel = { path = "../api" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync", "macros"] }
tracing = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
