[package]
name = "vs-vpn-tunnel-tcp-encrypted"
version.workspace = true
edition.workspace = true

[dependencies]
vs-vpn-tunnel = { path = "../api" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "io-util"] }
